phase implemented
